[package]
name = "async_async_io"
version = "0.1.3"
edition = "2021"
description = "`AsyncRead`, `AsyncWrite` traits but with `async fn` methods."
license = "MIT"
repository = "https://github.com/Banyc/async_async_io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures-core = "0.3.28"
reusable-box-future = "0.2.0"
tokio = { version = "1.28.2", features = ["net"] }

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }

[features]
no-async-trait = []
