[package]
name = "async_async_io"
version = "0.2.3"
edition = "2021"
description = "`AsyncRead`, `AsyncWrite` traits but with `async fn` methods."
license = "MIT"
repository = "https://github.com/Banyc/async_async_io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reusable-box-future = "0.2"
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[features]
"impl_trait_in_assoc_type" = []
